feat: ajout de la version de la ressource dans la reponse et la configuration
